<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_joke"
            android:icon="@drawable/ic_joke"
            android:title="@string/nav_joke"/>

        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_featured"
            android:title="@string/nav_featured"/>

        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_collection"
            android:title="@string/nav_collection"/>

        <item

            android:id="@+id/nav_colorful"
            android:icon="@drawable/ic_colorful"
            android:title="@string/nav_colorful"/>
    </group>
</menu>
