<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/name"
            style="@style/CommEditText"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:inputType="textPersonName"
            android:hint="@string/input_account"/>

        <EditText
            android:id="@+id/pass"
            style="@style/CommEditText"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:inputType="textPassword"
            android:layout_below="@+id/name"
            android:hint="@string/input_password"/>

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass"
            android:layout_alignLeft="@+id/pass"
            android:layout_alignStart="@+id/pass"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:text="@string/remember_me"/>

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/remember"
            android:layout_alignEnd="@+id/pass"
            android:layout_alignRight="@+id/pass"
            android:text="@string/forgot_pass"/>

        <Button
            android:id="@+id/login"
            style="@style/CommButton"
            android:layout_below="@+id/remember"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:text="@string/dialog_login_btn"/>

        <Button
            android:id="@+id/cancel"
            style="@style/CommButton"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:layout_marginBottom="@dimen/layout_common_padding"
            android:text="@string/cancel"/>
    </RelativeLayout>
</layout>