<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/name"
            style="@style/CommEditText"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:inputType="textPersonName"
            android:hint="@string/input_account"/>

        <EditText
            android:id="@+id/pass"
            style="@style/CommEditText"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:inputType="textPassword"
            android:layout_below="@+id/name"
            android:hint="@string/input_password"/>

        <EditText
            android:id="@+id/againPass"
            style="@style/CommEditText"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:inputType="textPassword"
            android:layout_below="@+id/pass"
            android:hint="@string/input_again_password"/>

        <Button
            android:id="@+id/register"
            style="@style/CommButton"
            android:layout_below="@+id/againPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:text="@string/dialog_register_btn"/>

        <Button
            android:id="@+id/cancel"
            style="@style/CommButton"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_common_padding"
            android:layout_marginBottom="@dimen/layout_common_padding"
            android:text="@string/cancel"/>
    </RelativeLayout>
</layout>