<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="click"
            type="com.android.reading.interactive.ClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/prompt"
            style="@style/TitleText"
            android:layout_above="@+id/login"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/welcome"/>

        <RelativeLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_card_view_height"
            android:layout_above="@+id/line"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:background="@color/register_card_color"
            android:onClick="@{() -> click.onClick(0)}">

            <TextView
                style="@style/InfoText"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:textSize="@dimen/default_text_size"
                android:text="@string/login_prompt"/>
        </RelativeLayout>

        <View
            android:id="@+id/line"
            style="@style/line_horizontal"
            android:layout_centerVertical="true"
            android:layout_height="@dimen/layout_common_padding"
            android:background="@color/transparent" />

        <RelativeLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_card_view_height"
            android:layout_below="@+id/line"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:background="@color/login_card_color"
            android:onClick="@{() -> click.onClick(1)}">

            <TextView
                style="@style/InfoText"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/default_text_size"
                android:text="@string/register_prompt"/>
        </RelativeLayout>

        <!--<android.support.v7.widget.CardView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_card_view_height"
            android:layout_centerVertical="true">

        </android.support.v7.widget.CardView>-->
    </RelativeLayout>
</layout>